# pandas-util

./: README.md  concat.py  drop-column.py  drop-columns.py  from-csv.py  from_json.py  join.py  pluck.py  pyproject.toml  query.py  rename-columns.py  requirements.txt  ruff.toml  run-tests.sh  sort.py  table-format.py  to-json.py  to-markdown-table.py  to-table-format.py
.github/workflows/: test.yml
expected/: concat-1  concat-3  concat-d-1  drop-colums-2  drop-colums-3  from-csv-2  from-json-2  join-1  pluck-2  pluck-3  query-1  query-2  rename-1  rename-2  rename-3  sort-1  sort-2  to-json-1  to-json-2  to-markdown-table-1  to-markdown-table-2  to-table-format-1  to-table-format-2
testdata/: f2  f3  f4.jsonl  f5.csv
