[project]
name = "pandas-util"
version = "0.1.0"
description = "pandas"
authors = [
    { name = "tckz", email = "at.tckz@gmail.com" }
]
dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2024.1",
    "tabulate>=0.9.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pandas_util"]
