[project]
name = "pandas-util"
version = "0.1.0"
description = "pandas"
authors = [
    { name = "tckz", email = "at.tckz@gmail.com" }
]
dependencies = [
    "numexpr>=2.14.1",
    "pandas==2.3.3",
    "tabulate>=0.9.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pandas_util"]

[dependency-groups]
dev = [
    "ruff==0.14.1",
]
